[pbr]
skip_authors = true
skip_changelog = true
skip_reno = true

[metadata]
name = drs-client
author = Daniel J. B. Clarke
author-email = danieljbclarkemssm@gmail.com
summary = A client for GA4GHs DRS
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
classifier =
  Development Status :: 4 - Beta
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.10
keywords =
  drs
  cloud
  storage

[files]
packages =
  drs_client

[extras]
cloud =
  fsspec
